samples/_failures_safe/1761137542_e23cfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01054551.c: In function ‘main’:
./samples/SAFE/__tmp_01054551.c:142:25: error: missing terminating " character
  142 |         fprintf(stderr, "Input too large\n
      |                         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_01054551.c:142:9: error: expected expression at end of input
  142 |         fprintf(stderr, "Input too large\n
      |         ^~~~~~~
./samples/SAFE/__tmp_01054551.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01054551.c:142:9: error: expected declaration or statement at end of input
